--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
             <version>5.6.1</version>
             <scope>test</scope>
         </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.12</version>
+                <scope>provided</scope>
+            </dependency>
     </dependencies>
     <build>
         <plugins>
